fixed col-md-2 spacing

--- a/portfolioProject/image_app/static/css/style.css
+++ b/portfolioProject/image_app/static/css/style.css
@@ -13,3 +13,9 @@ body {
     border-radius: 5px; 
 }
 
+@media (min-width: 768px) { 
+    .col-md-2 {
+        flex: 0 0 12%;
+    }
+}
+
